--- a/chekpoint5.html
+++ b/chekpoint5.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<link rel="stylesheet" href="./css/sheet1.css"/>
+<link rel="stylesheet" href="sheet1.css"/>
 </head>
 <body class="body" style="padding: 20px;">
         <h1 class="head">ADA Students feedback</h1>
